css/less/10-lyquix-lyqbox.less
// Lyquix - Lyqbox
// --------------------------------------------------------------------

// shared button style, used by prev, next and close
.lyqbox-buttons() {
	display: block;
	position: absolute;

	&:hover {
		cursor: pointer;
	}

	&:after {
		.icon();
		font-size: 3.8rem;
	}
}

// style for lyqbox items, these are the thumbnails that when clicked will launch the lyqBox
.lyqbox-item {
	cursor: pointer;
	display: inline-block;
	float: left;
	line-height: 0;
	margin: 1px;
}

// style for the lyqBox overlay
.lyqbox {
	position: fixed;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;

	z-index: 9999;
	transition: visibility 0s linear 0.5s, opacity 0.5s linear;  
	background-color: rgba(0, 0, 0, 0.8);
	visibility: hidden;
	opacity: 0;

	color: #fff;

	&.open{
		visibility: visible;
		opacity: 1;
		transition-delay: 0s;
	}

	// container of img, iframe or HTML
	.content-wrapper {
		opacity: 0;
		transition: opacity .5s;
		
		.content {
			position: absolute;
			top: 0px;
			left: 0px;
			right: 0px;
			bottom: 0px;
			max-width: 100%;

			&.image img {
				z-index:0;
				max-width: 90%;
				max-height: 90%;
				position: absolute;
				top: 0px;
				left: 0px;
				right: 0px;
				bottom: 0px;
				margin: auto;
			}

			&.video {
				padding: 5%;
			}

			.video-container {
				.video-16-9();
				iframe {
					border: none;
				}
			}

		}

		.info {
			position: absolute;
			left: 10px;
			bottom: 10px;
		}

		&.active {
			opacity: 1;
		}
	}

	// close button
	.close {
		.lyqbox-buttons();
	    right: 10px;
	    top: 10px;		

		&:after {
			.ion-ios-close-empty();
		}
	}

	// prev button
	.prev {
		.lyqbox-buttons();
		top: calc(~'50% - 2em');
		left: 10px;

		&:after {
			.ion-ios-arrow-left();
		}					
	}

	// next button
	.next {
		.lyqbox-buttons();
		top: calc(~'50% - 2em');
		right: 10px;

		&:after {
			.ion-ios-arrow-right();
		}
	}

	.counter {
		position: absolute;
		bottom: 10px;
		right: 10px;
	}

	.hide {
		display: none;
	}
}

